# ChangeLog for media-tv/xdtv
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-tv/xdtv/Attic/ChangeLog,v 1.2 2005/07/10 11:26:33 zzam Exp $

  10 Jul 2005; Matthias Schwarzott <zzam@gentoo.org> xdtv-2.2.0.ebuild:
  Added to ~x86

*xdtv-2.2.0 (09 Jul 2005)

  09 Jul 2005; Diego Pettenò <flameeyes@gentoo.org> +metadata.xml,
  +xdtv-2.2.0.ebuild:
  First version of xdtv (supersedes xawdecode). Applied patches for gcc4
  support and amd64 mmx/sse support.
  Thanks to TGL <degrenier@easyconnect.fr> in bug #48129.
